fixed dark mode color vars

--- a/_components.scss
+++ b/_components.scss
@@ -102,7 +102,7 @@
 }
 
 .nav__right {
-    background-color: white;
+    background-color: var(--background-color);
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     transform: scaleY(0);
